# Jade

./: .gitignore  .sample-env  CMakeLists.txt  Dockerfile  README.md  build.sh  build_all.sh  build_dev.sh  build_prod.sh  docker-compose.yaml  grep  test.py
include/apis/: apis.h
include/commands/: commands.h  reply_command.h
include/commands/ollama/: chat_command.h  describe_command.h
include/commands/voice/: join_command.h  leave_command.h  pause_command.h  play_command.h  play_test_command.h  resume_command.h  skip_command.h
include/utils/: env.h  jade_embed.h  jade_queue.h  jade_slash.h  jade_util.h
include/utils/ollama/: ollama.h
include/utils/voice/: stream_audio.h
include/utils/youtube/: youtube_helpers.h
src/: main.cpp
src/apis/: apis.h  generate.cpp  helpers.cpp  llm.cpp  llmChat.cpp  llmMaster.cpp
src/commands/: chat.cpp  clear.cpp  commands.h  echo.cpp  llmCommands.cpp  nolan.cpp  reply_command.cpp  say.cpp  voice.cpp
src/commands/ollama/: chat_command.cpp  describe_command.cpp
src/commands/voice/: join_command.cpp  leave_command.cpp  pause_command.cpp  play_command.cpp  play_test_command.cpp  resume_command.cpp  skip_command.cpp
src/utils/: env.cpp  jade_embed.cpp  jade_queue.cpp  jade_slash.cpp  jade_slash.cpp~  jade_util.cpp  log.cpp  utils.h
src/utils/ollama/: ollama.cpp
src/utils/voice/: stream_audio.cpp
src/utils/youtube/: youtube_helpers.cpp
